# Arenamate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  config.py  logging_conf.py  main.py
app/data/: amenities.json  arena.json  crowd.json
app/models/: __init__.py  schemas.py
app/services/: __init__.py  arena_data.py  context_engine.py  crowd.py  llm.py  phrasing.py  routing.py  security.py
app/static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_api.py  test_arena_data.py  test_context_engine.py  test_crowd.py  test_llm.py  test_phrasing.py  test_routing.py  test_schemas.py  test_security.py  test_static.py
